# home_db_raylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_base.cpp  data_base.h  datenbank.db  main.cpp
